NEW: /books/search/:search -- Get all books matching the given search term (case insensitive)
